--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -226,10 +226,11 @@ body::-webkit-scrollbar-thumb {
 }
 
 .card-image {
+  display: block;
   padding: 1px;
   border-radius: 5px;
   width: 373px;
-  height: 100%;
+  height: 300px;
   object-fit: cover;
 }
 
@@ -807,4 +808,9 @@ body::-webkit-scrollbar-thumb {
   border-top: 3px solid #f7b8b7;
   text-align: center;
   align-self: center;
+}
+
+.search-product-flex {
+  display: flex;
+  justify-content: space-between;
 }
