--- a/app/views/shared/_product_image.html.erb
+++ b/app/views/shared/_product_image.html.erb
@@ -1,5 +1,5 @@
     <% if product.product_photo.attached? %>
-      <%= image_tag product.product_photo, class:"product-image-tiny", alt: 'Product Image'  %>
+      <%= link_to image_tag(product.product_photo, :class => "product-image-tiny", :alt => "Product Image"), product_path(product.id)  %>
       <% else %>
         <%= image_tag 'image_not_available.webp', class:"card-image-not-found-sm", alt: 'Image Not Found' %>
     <% end %>
