--- a/app/views/shared/_product_image_big.html.erb
+++ b/app/views/shared/_product_image_big.html.erb
@@ -1,5 +1,5 @@
     <% if product.product_photo.attached? %>
-      <%= image_tag product.product_photo, class:"card-image" %>
+      <%= link_to image_tag(product.product_photo, class: "card-image", alt: "Product Image"), product_path(product.id) %>
       <% else %>
         <%= image_tag 'image_not_available.webp', class:"card-image-not-found", alt: 'Image Not Found ' %>
     <% end %>
