--- a/app/views/pages/search.html.erb
+++ b/app/views/pages/search.html.erb
@@ -10,7 +10,7 @@
           </div>
         <% end %>
         <% @results_products.each do |results_product| %>
-          <div class='search-review-card'>
+          <div class='search-product-card'>
 
             <div class='search-product-flex'>
 
