--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,16 +16,19 @@
 
     <div class="container">
 
-      <div class="flash-wrap">
-        <%= content_tag(:p, notice, class: 'flash') if notice %>
-        <%= content_tag(:p, alert,  class: 'flash' ) if alert  %>
+      <div class="content">
+        <div class="flash-wrap">
+          <%= content_tag(:p, notice, class: 'flash') if notice %>
+          <%= content_tag(:p, alert,  class: 'flash' ) if alert  %>
+        </div>
+
+        <%= yield %>
       </div>
-
-      <%= yield %>
-
     </div>
-    
-    <%= render "shared/footer" %>
+
+    <footer>
+      <%= render "shared/footer" %>
+    </footer>
 
   </body>
 </html>
