--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -908,3 +908,24 @@ body::-webkit-scrollbar-thumb {
 .footer-spacer {
   margin-top: 15px;
 }
+
+// Static Footer Pages
+
+.static-page-flex {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  // align-items: baseline;
+
+  & > .static-flex1 {
+    order: 1;
+    margin-top: 10px;
+    // justify-content: center;
+
+  }
+
+  & > .static-flex2 {
+    order: 2;
+    margin-top: 40px;
+  }
+}
