--- a/app/views/pages/privacy_policy.html.erb
+++ b/app/views/pages/privacy_policy.html.erb
@@ -1,3 +1,8 @@
-<h2>Jobs</h2>
-
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut tempora quidem velit necessitatibus voluptate asperiores aliquid, beatae, ducimus error maxime perspiciatis fugiat omnis dolorum ab neque provident dicta quasi sequi corporis cumque dolor placeat? Ratione cupiditate quaerat a vero repellendus, fugit earum suscipit sequi unde mollitia, accusamus beatae voluptate aliquid harum, adipisci ad saepe dolorem eum similique laboriosam! Nesciunt minus vero natus, corrupti assumenda dolor velit commodi, omnis adipisci inventore ullam. Ratione eveniet corporis necessitatibus nobis laudantium magni cumque ut eligendi nostrum? Dicta tempore reprehenderit assumenda! Accusamus consequuntur, dicta, nesciunt non ad unde, commodi quasi nobis libero culpa quo soluta.  Honestly, are you kidding me here?  You don't even need a real email to log in.  Go tell your story to someone else.  Go!</p>
+<div class="static-page-flex">
+  <div class="static-flex1">
+    <h2>Privacy Policy</h2>
+  </div>
+  <div class="static-flex2">
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas optio non vel harum! Porro quas doloribus distinctio quibusdam! Molestiae ipsam est voluptatibus ex eius rerum, vitae aperiam id, consequuntur distinctio maiores! Rerum explicabo non sequi porro odio nemo quia beatae quas vitae deleniti unde repellendus consequuntur sed ipsa fugiat commodi, pariatur corrupti eos. Explicabo maiores sit pariatur, laudantium error quasi eligendi nemo laboriosam aperiam ex? Laudantium possimus esse alias iusto omnis minima dolor aliquam accusantium. We believe in privacy very strongly.  Everyone on this website needs to keep themselves to their own business.  We have decided to erect a good neighbor fence to make certain that will be the way of it.</p>
+  </div>
+</div>
