--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,11 +1,11 @@
 <div class="footer">
   <h4><%= link_to "Home", root_path %></h4>
-  <h4>Services</h4>
-  <h4>About</h4>
-  <h4>Jobs</h4>
-  <h4>Terms</h4>
+  <h4><%= link_to "Services", services_path %></h4>
+  <h4><%= link_to "About", about_path %></h4>
+  <h4><%= link_to "Jobs", jobs_path %></h4>
+  <h4><%= link_to "Terms", terms_path %></h4>
   <div class="footer-flex-end">
-    <h4>Privacy Policy</h4>
+    <h4><%= link_to "Privacy Policy", privacy_policy_path %></h4>
   </div>
   <div class="footer-flex-end footer-legal footer-spacer">
     <p>Font made from <a href="http://www.onlinewebfonts.com">oNline Web Fonts</a> is licensed by CC BY 3.0</p>
