--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,25 +1,51 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Users</h1>
+<h1 class="center">Our Community</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+<div class="reviews-container">
+  <% if @users.any? %>
+      <div class="reviews-ul">
+        <% @users.each do |user| %>
 
-  <tbody>
-    <% @users.each do |user| %>
-      <tr>
-        <td><%= link_to 'Show', user %></td>
-        <td><%= link_to 'Edit', edit_user_path(user) %></td>
-        <td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
 
-<br>
+          <div class="review-card">
+            <div class="review-card-flex">
+              <div class="review-box1">
 
-<%= link_to 'New User', new_user_path %>
+                <% if user.avatar_pic.attached? %>
+                  <%= image_tag user.avatar_pic, class:"avatar" %><br>
+                  <% else %>
+                    <%= image_tag 'generc_profile_pic.webp', class:"avatar", alt: 'Avatar Not Found ' %><br>
+                <% end %>
+                <% if user.user_name? %>
+                  <%= user.user_name %>
+                  <% else %>
+                  <p>Guest User</p>
+                <% end %>
+
+              </div>
+              <div class="review-box2">
+                <p>Number of Reviews: <%= User.user_reviews(user.id) %></p>
+
+              </div>
+              <div class="review-box3">
+                <p>Average Rating: <%= User.user_ave_rating(user.id) %></p>              
+              </div>
+            </div>
+              <div class="review-stars"> 
+              </div>
+            <div class="review-index-text">
+                <p>Most Recent Review: <%= User.user_latest_review(user.id) %></p>
+            </div>
+          </div> 
+
+        <% end %>
+      </div>
+
+  <% else %>
+    <p>There are no users (yet).</p>
+  <% end %>
+</div>
+<div class="pagination">
+  <%= will_paginate @reviews%>
+</div>
