--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -934,18 +934,18 @@ body::-webkit-scrollbar-thumb {
 
 .community-flex-container {
   display: flex;
-  justify-content: center;
+  // justify-content: center;
   flex-direction: column;
-  align-items: center;
+  // align-items: center;
   // width: auto;
-  max-height: 100vh;
+  max-height: 200vh;
   flex-flow: column wrap;
   // flex-wrap: wrap;
 }
 
 .community-profile-card {
   padding: 10px;
-  width: 38%;
+  width: 45%;
   height: 170px;
   border: 1px;
   border-radius: 5px;
@@ -954,6 +954,7 @@ body::-webkit-scrollbar-thumb {
   text-align: left;
   margin-bottom: 5px;
   align-self: center;
+  white-space: nowrap;
 }
 
 .community-profile-flex {
