--- a/lib/tasks/scratch_paper.html.erb
+++ b/lib/tasks/scratch_paper.html.erb
@@ -75,3 +75,25 @@
                       <%= render partial: "shared/review_stars", locals: { review: User.user_reviews(user.id) } %>
                     </div>
                   </div>
+
+<div class="sort-flex-wrapper">
+  <h1 class="center">Our Community</h1>
+
+  <div class="btn-group sort-button">
+    <button type="button" class="btn btn-outline-secondary btn-sm dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+      Sort By
+    </button>
+    <div class="dropdown-menu">
+      <a class="dropdown-item" href="#">User Name</a>
+      <a class="dropdown-item" href="#">Highest Average Rating</a>
+      <a class="dropdown-item" href="#">Lowest Average Rating</a>
+      <a class="dropdown-item" href="#">Most Reviews</a>
+      <a class="dropdown-item" href="#">Least Reviews</a>
+      <a class="dropdown-item" href="#">Most Recent Review</a>
+      <a class="dropdown-item" href="#">Least Recent Review</a>
+      <div class="dropdown-divider"></div>
+      <a class="dropdown-item" href="#">Separated link</a>
+    </div>
+  </div>
+</div>
+
