--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -8,13 +8,16 @@
       Sort By
     </button>
     <div class="dropdown-menu">
-      <a class="dropdown-item" href="#">User Name</a>
-      <a class="dropdown-item" href="#">Highest Average Rating</a>
-      <a class="dropdown-item" href="#">Lowest Average Rating</a>
-      <a class="dropdown-item" href="#">Most Reviews</a>
-      <a class="dropdown-item" href="#">Least Reviews</a>
-      <a class="dropdown-item" href="#">Most Recent Review</a>
-      <a class="dropdown-item" href="#">Least Recent Review</a>
+
+      <%= link_to "User Name A-Z", users_path, class: "dropdown-item" %>
+      <%= link_to "User Name Z-A", users_path, class: "dropdown-item" %>
+      <%= link_to "Highest Average Rating", users_path, class: "dropdown-item" %>
+      <%= link_to "Lowest Average Rating", users_path, class: "dropdown-item" %>
+      <%= link_to "Most Reviews", users_path, class: "dropdown-item" %>
+      <%= link_to "Least Reviews", users_path, class: "dropdown-item" %>
+      <%= link_to "Most Recent Review", users_path, class: "dropdown-item" %>
+      <%= link_to "Least Recent Review", users_path, class: "dropdown-item" %>
+
     </div>
   </div>
 </div>
