--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -9,14 +9,14 @@
     </button>
     <div class="dropdown-menu">
 
-      <%= link_to "User Name A-Z", users_path, class: "dropdown-item" %>
-      <%= link_to "User Name Z-A", users_path, class: "dropdown-item" %>
-      <%= link_to "Highest Average Rating", users_path, class: "dropdown-item" %>
-      <%= link_to "Lowest Average Rating", users_path, class: "dropdown-item" %>
-      <%= link_to "Most Reviews", users_path, class: "dropdown-item" %>
-      <%= link_to "Least Reviews", users_path, class: "dropdown-item" %>
-      <%= link_to "Most Recent Review", users_path, class: "dropdown-item" %>
-      <%= link_to "Least Recent Review", users_path, class: "dropdown-item" %>
+      <%= link_to "User Name A-Z", users_path(:az => 'az'), class: "dropdown-item" %>
+      <%= link_to "User Name Z-A", users_path(:za => 'za'), class: "dropdown-item" %>
+      <%= link_to "Highest Average Rating", users_path(:high_rating => 'high_rating'), class: "dropdown-item" %>
+      <%= link_to "Lowest Average Rating", users_path(:low_rating => 'low_rating'), class: "dropdown-item" %>
+      <%= link_to "Most Reviews", users_path(:most_reviews => 'most_reviews'), class: "dropdown-item" %>
+      <%= link_to "Least Reviews", users_path(:least_reviews => 'least_reviews'), class: "dropdown-item" %>
+      <%= link_to "Most Recent Review", users_path(:most_recent => 'most_recent'), class: "dropdown-item" %>
+      <%= link_to "Least Recent Review", users_path(:least_recent => 'least_recent'), class: "dropdown-item" %>
 
     </div>
   </div>
