Fix our community flexbox column wrap issue

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -944,6 +944,7 @@ body::-webkit-scrollbar-thumb {
 }
 
 .community-profile-card {
+  flex: 0 1 11%;
   padding: 10px;
   width: 45%;
   height: 170px;
