--- a/app/views/shared/_highest_reviewed_card.html.erb
+++ b/app/views/shared/_highest_reviewed_card.html.erb
@@ -1,5 +1,5 @@
 
-<% @highest_revieweds.each do |highest_reviewed| %>
+<% @highest_revieweds.first(6).each do |highest_reviewed| %>
   <div class="card">
     <div class="arrow-top-reviewed">
       <span>Top Rated</span>
