Fix spacing issue that only appears on our community index

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,6 +1,6 @@
 <p id="notice"><%= notice %></p>
 
-<div class="sort-flex-wrapper">
+<div class="sort-flex-wrapper sort-our-community-spacer">
   <h1 class="center">Our Community</h1>
 
   <div class="btn-group sort-button">
