--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1018,7 +1018,6 @@ body::-webkit-scrollbar-thumb {
 // Sort By Button for lists
 
 .sort-flex-wrapper {
-  margin-top: -17px;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
 
@@ -1035,4 +1034,8 @@ body::-webkit-scrollbar-thumb {
     height: 30px;
     margin-right: 30px;
   }
+}
+
+.sort-our-community-spacer {
+  margin-top: -17px;
 }
